## Copyright (c) 2001
## The cluttermm development team.

sublib_name	= cluttermm
sublib_namespace = Clutter
sublib_parentdir = cluttermm
files_defs	= libclutter.defs libclutter_methods.defs libclutter_signals.defs \
                  libclutter_enums.defs libclutter_vfuncs.defs libclutter_others.defs libclutter_docs.xml \
                  libclutter_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

