## Copyright (c) 2001
## The cluttermm development team.

sublib_name	= cluttermm
sublib_namespace = Clutter
sublib_parentdir = cluttermm
files_defs	= clutter.defs clutter_methods.defs clutter_signals.defs \
                  clutter_enums.defs clutter_vfuncs.defs clutter_others.defs clutter_docs.xml \
                  clutter_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

