## Copyright (c) 2001
## The goocanvasmm development team.

sublib_name	= goocanvasmm
sublib_namespace = Goocanvas
sublib_parentdir = goocanvasmm
files_defs	= libgoocanvas.defs libgoocanvas_methods.defs libgoocanvas_signals.defs \
                  libgoocanvas_enums.defs libgoocanvas_vfuncs.defs libgoocanvas_others.defs libgoocanvas_docs.xml \
                  libgoocanvas_docs_override.xml

include $(top_srcdir)/build_shared/Makefile_gensrc.am_fragment

